--- a/Native Mood App?/Info.plist
+++ b/Native Mood App?/Info.plist
@@ -32,5 +32,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We would like to use the photo library to save to the contact!</string>
 </dict>
 </plist>
